ACPI: thermal: Register thermal zones without valid trip points

JIRA: https://issues.redhat.com/browse/RHEL-54149
Conflicts:
       drivers/acpi/thermal.c - in the first stanza, I passed
tz->trip_table to thermal_zone_device_register_with_trips(),
along with an additional 0 argument, to match the form of the
function in the centos-9 codebase.
	in the second stanza, I used tz->trip_table instead of
trip_table

commit 8a4ff5452dd0cdcc35940460bb777d836bece11c
Author: Stephen Horvath <s.horvath@outlook.com.au>
Date:   Sun Mar 31 18:37:06 2024 +1000

Some laptops where the thermal control is handled by the EC may
provide trip points that fail the kernels new validation, but still have
working temperature sensors. An example of this is the Framework 13 AMD.

This patch allows the thermal zone to still be registered without trip
points if the trip points fail validation, allowing the temperature
sensor to be viewed and used by the user.

Closes: https://bugzilla.kernel.org/show_bug.cgi?id=218586
Fixes: 9c8647224e9f ("ACPI: thermal: Use library functions to obtain trip point temperature values")
Signed-off-by: Stephen Horvath <s.horvath@outlook.com.au>
[ rjw: Subject edits, remove redundant braces ]
Signed-off-by: Rafael J. Wysocki <rafael.j.wysocki@intel.com>
Signed-off-by: Mark Langsdorf <mlangsdo@redhat.com>